# log-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt
include/: log.hpp
src/: log.cpp  main.cpp
